[package]
name = "tokio-serde-bincode"
version = "0.2.1"
authors = ["Carl Lerche <me@carllerche.com>",
           "Alex Crichton <alex@alexcrichton.com>",
           "Antoni Boucher <bouanto@zoho.com>",
           "Luben Karavelov <karavelov@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luben/tokio-serde-bincode"
homepage = "https://github.com/luben/tokio-serde-bincode"
documentation = "https://docs.rs/tokio-serde-bincode"
description = """
Tokio bindings to quickly turn a stream of bytes to a stream of
parsed/serialized items using the bincode format.
"""

[dependencies]
futures = "0.1"
bytes = "0.4"
tokio-serde = "0.3"
serde = "1.0"
bincode = "1.0"

[features]
i128 = ["bincode/i128"]

[dev-dependencies]
serde_derive = "1"
tokio = "0.1"
